# designPrinciples

./: CMakeLists.txt  main.cpp
Builder/: builder.cpp  builder.h
SOLID/: DependancyInversionPrinc.cpp  DependancyInversionPrinc.h  InterfaceSegPrinc.cpp  InterfaceSegPrinc.h  LiskovSubPrinc.cpp  LiskovSubPrinc.h  OpenClosed.cpp  OpenClosed.h
